@@ -1,5 +1,13 @@
 2016-08-09  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
+	* config/msvc/Makefile (#QTDIR, TOP, MOC, UIC, RCC, S, W, WX, Q)
+	(T, D, M, {$(S)}.c.obj, {$(S)}.c.cobj, $(HELPFILE), doc2html.exe)
+	($(M)bf_test.exe, demo_plugin.dll): Reduce slightly excessive use
+	of double backslashes.
+	(VERSION_CPPFLAGS): Define version numbering flags.
+	(doc2html.exe): Pass version numbering flags.
+	(COMMONLIBS): Add newly required lib shlwapi.
+
 	* config/config.nt (HAVE_ERF, HAVE_ERFC, HAVE_STDBOOL_H, isnan):
 	Configure macros for current version of MSVC (VS 2015).
 
